kubernetes/apps/base/karakeep/deployment-chrome.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chrome
  namespace: karakeep
  annotations:
    reloader.stakater.com/auto: "true"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: chrome
  template:
    metadata:
      labels:
        app: chrome
    spec:
      containers:
        - name: chrome
          image: gcr.io/zenika-hub/alpine-chrome:124
          command:
            - chromium-browser
            - --headless
            - --no-sandbox
            - --disable-gpu
            - --disable-dev-shm-usage
            - --remote-debugging-address=0.0.0.0
            - --remote-debugging-port=9222
            - --hide-scrollbars
          resources:
            requests:
              memory: "512Mi"
              cpu: "100m"
            limits:
              memory: "1Gi"
              #cpu: "1000m"
