kubernetes/apps/base/karakeep/deployment-karakeep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web
  namespace: karakeep
  annotations:
    reloader.stakater.com/auto: "true"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: karakeep-web
  template:
    metadata:
      labels:
        app: karakeep-web
    spec:
      containers:
        - name: karakeep-web
          image: ghcr.io/karakeep-app/karakeep:0.32.0
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
          volumeMounts:
            - mountPath: /data
              name: data
          resources:
            requests:
              memory: "256Mi"
              cpu: "100m"
            limits:
              memory: "1Gi"
              #cpu: "1000m"
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: karakeep-pvc
