kubernetes/apps/base/karakeep/deployment-meilisearch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: meilisearch
  namespace: karakeep
  annotations:
    reloader.stakater.com/auto: "true"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: meilisearch
  template:
    metadata:
      labels:
        app: meilisearch
    spec:
      containers:
        - name: meilisearch
          image: getmeili/meilisearch:v1.54.2
          resources:
            requests:
              memory: "256Mi"
              cpu: "100m"
            limits:
              memory: "512Mi"
              #cpu: "500m"
          volumeMounts:
            - mountPath: /meili_data
              name: meilisearch

      volumes:
        - name: meilisearch
          persistentVolumeClaim:
            claimName: meilisearch-pvc
